# typsphinx

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  flake.nix  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  drift.yml  release.yml
.gsd/: CODEBASE.md  notifications.jsonl
.planning/: BACKLOG.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: block-quote-markup-mode-unclosed-delimiter.md  codly-start-param-mismatch.md  confval-field-body-inline-juxtaposition.md  cross-document-label-collision-namespacing.md  deflist-definition-multiblock-unwrapped-arg.md  deflist-nested-definition-body-clobber.md  deflist-term-adjacent-inline-concat.md  desc-container-propagated-target-missing-anchor.md  desc-signature-missing-anchor-dangling-label.md  desc-signature-newline-concat-stray-plus.md  duplicate-module-label-corpus.md  field-list-in-list-item-separator.md  image-glob-not-resolved.md  label-ref-at-char-unclosed-label.md  list-item-nested-block-adjacency.md  paragraph-propagated-target-missing-anchor.md  ref-with-target-and-nested-list-juxtaposition.md  rubric-propagated-target-missing-anchor.md  static-asset-copy-typstpdf.md  substitution-definition-skipnode.md  table-in-list-item-separator.md  typst-string-literal-newline-escape.md  xref-to-orphan-non-included-doc.md
.planning/milestones/: v0.4.4-REQUIREMENTS.md  v0.4.4-ROADMAP.md  v0.5.0-MILESTONE-AUDIT.md  v0.5.0-REQUIREMENTS.md  v0.6.0-MILESTONE-AUDIT.md  v0.6.0-REQUIREMENTS.md  v0.6.1-REQUIREMENTS.md  v0.6.1-ROADMAP.md  v0.6.2-REQUIREMENTS.md  v0.6.2-ROADMAP.md
.planning/notes/: 2026-07-21-custom-template-wrapping-typst-package.md
.planning/phases/01-pin-runtime-dependencies-to-known-good/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-verify-the-green-baseline/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-VERIFICATION.md
.planning/phases/03-modernize-python-floor-3-10-3-13/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-refresh-dev-tooling/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-PATTERNS.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-durability-guardrails/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-PATTERNS.md  05-RESEARCH.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-raise-runtime-pins-python-floor/: 06-01-PLAN.md  06-01-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-PATTERNS.md  06-RESEARCH.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: build_multilang.py  configuration.rst
docs/source/: conf.py
en/: .buildinfo  changelog.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
en/.doctrees/: changelog.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  quickstart.doctree
en/_modules/: index.html
en/api/: index.html
en/examples/: advanced.html  basic.html  index.html
en/user_guide/: builders.html  configuration.html  index.html  templates.html
examples/advanced/: README.md  conf.py
examples/charged-ieee/: README.md
ja/: .buildinfo  changelog.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
ja/.doctrees/: changelog.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  quickstart.doctree
ja/_modules/: index.html
ja/_static/: documentation_options.js
ja/api/: index.html
ja/examples/: advanced.html  basic.html  index.html
ja/user_guide/: builders.html  configuration.html  index.html  templates.html
tests/: test_abbr_pep_separator_render_gate.py  test_admonitions.py  test_builder.py  test_builder_output_stem.py  test_codly_caption_listitem_leak_render_gate.py  test_config_other_options.py  test_config_toctree_defaults.py  test_confval_field_body_render_gate.py  test_confval_field_spacing_render_gate.py  test_corpus_gate.py  test_cross_doc_label_namespace_render_gate.py  test_deflist_definition_multiblock_render_gate.py  test_deflist_nested_definition_render_gate.py  test_deflist_term_concat_render_gate.py  test_deflist_term_inline_children_gate.py  test_desc_bodyless_concat_render_gate.py  test_desc_container_propagated_target_render_gate.py  test_desc_sig_space_render_gate.py  test_desc_signature_anchor_render_gate.py  test_desc_signature_concat_render_gate.py  test_documentation_configuration.py  test_documentation_usage.py  test_duplicate_include_label_render_gate.py  test_entry_points.py  test_epigraph_render_gate.py  test_examples_basic.py  test_examples_charged_ieee_gate.py  test_extension.py  test_external_link_style_render_gate.py  test_field_list_in_list_item_render_gate.py  test_footnotes.py  test_glob_image_render_gate.py  test_inline_literal_overflow_render_gate.py  test_label_at_char_render_gate.py  test_line_blocks.py  test_list_item_nested_block_render_gate.py  test_missing_and_malformed_master_gate.py  test_nested_master_render_gate.py  test_package_only_config_gate.py  test_package_template_routing.py  (+23 more)
typsphinx/: __init__.py  builder.py  pdf.py  template_engine.py  translator.py  writer.py
typsphinx/templates/: base.typ
(+497 files in other folders)
