[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "typsphinx"
version = "0.6.0"
description = "Sphinx extension for Typst output"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "YuSabo", email = "yusabo90002@gmail.com"}
]
keywords = ["sphinx", "typst", "documentation", "pdf"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "sphinx>=9.1,<10",
    "docutils>=0.21,<0.23",
    "typst>=0.15.0,<0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4,<10",
    "pytest-cov>=4.0",
    "tox>=4.56,<5",
    "tox-uv>=1.35,<2",
    "black>=26,<27",
    "ruff>=0.15,<0.16",
    "mypy>=1.13,<3.0",
    "pre-commit>=3.0",
    "types-docutils>=0.21",
    "twine>=5.0",
    "build>=1.0",
    "pypdf>=6.14,<7",
]
docs = [
    "furo>=2024.0",
    "sphinx-autodoc-typehints>=1.0",
    "sphinx-intl>=2.0",
]

[project.urls]
Homepage = "https://github.com/YuSabo90002/typsphinx"
Documentation = "https://github.com/YuSabo90002/typsphinx#readme"
Repository = "https://github.com/YuSabo90002/typsphinx"
Issues = "https://github.com/YuSabo90002/typsphinx/issues"

# Entry points for automatic Sphinx builder discovery
[project.entry-points."sphinx.builders"]
typst = "typsphinx"
typstpdf = "typsphinx"

[tool.setuptools.packages.find]
where = ["."]
include = ["typsphinx*"]
namespaces = false

[tool.setuptools.package-data]
"typsphinx" = ["templates/*.typ"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "error::DeprecationWarning",
    # Escalated beyond CONTEXT.md's literal "DeprecationWarning" text: Sphinx's own
    # RemovedInSphinxNNWarning family (e.g. builder.app) subclasses
    # PendingDeprecationWarning, not DeprecationWarning — without this line, future
    # Sphinx deprecations would pass through un-gated. See 08-RESEARCH.md Pitfall 2.
    "error::PendingDeprecationWarning",
    # No third-party ignore:: entries needed as of Sphinx 9.1.0/docutils 0.22.4/
    # typst-py 0.15.0 (verified zero third-party warnings in 08-RESEARCH.md). If a
    # future dependency bump introduces one, add a targeted
    # ignore::DeprecationWarning:<module> entry here — do not weaken the two `error`
    # lines above.
]

[tool.black]
line-length = 88
target-version = ["py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = [
    "E501",   # Line too long (handled by black)
    "T201",   # print found (used in tests for debugging)
    "B017",   # asserting blind exception in tests
    "UP035",  # typing.Dict/List/Set deprecation (Python 3.10+ support)
    "UP006",  # Use dict instead of Dict (Python 3.10+ support)
    "UP028",  # yield from (minor optimization)
    "N802",   # Function naming (docutils visitor pattern uses PascalCase)
    "A001",   # Shadowing builtins (copyright in conf.py is Sphinx convention)
    "F841",   # Unused variable (acceptable in tests and mocks)
]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = false
check_untyped_defs = false
warn_no_return = false
warn_unreachable = false
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "typsphinx.*"
disable_error_code = ["var-annotated", "arg-type", "override", "misc", "union-attr", "attr-defined", "list-item"]

[dependency-groups]
dev = [
    "types-docutils>=0.22.2.20251006",
]
